# Abotrep

./: Cargo.toml  README-RU.md  README.md
src/: captcha.rs  main-2.rs  main.rs
static/: error-style.css
templates/: 429.html  500.html  502.html  504.html  PoW.html  captcha-1.html  captcha.html  custom.html
