[package]
name = "abotrep"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.7", features = []}
reqwest = {version = "0.12.24",default-features = false, features = ["rustls-tls", "json", "stream"]}
tokio = {version =  "1.48.0", features = ["rt-multi-thread"] }
once_cell = "1.21.3"
tower-cookies = { version = "0.11.0", features = ["signed"] }
time = "0.3.44"
askama = "0.14.0"
dashmap = "7.0.0-rc2"
radix_trie = "0.3.0"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
tower-http = { version =  "0.6.7",features = ["fs"]  }
futures = "0.3.31"
sha2 = "0.10.9"
axum-server = { version = "0.7.3", features = ["tls-rustls"] }

rustls = { version = "0.23", default-features = false, features = ["ring"] }
rand = "0.9.2"
